z-index bug fixed

--- a/files/style.css
+++ b/files/style.css
@@ -40,6 +40,7 @@ header {
   transition: 0.2s ease-in-out;
   background-color: transparent;
   box-shadow: none;
+  z-index: 9;
 }
 
 header.scrolled {
